--- a/frontend/my-sms-messenger/src/app/login/login.css
+++ b/frontend/my-sms-messenger/src/app/login/login.css
@@ -9,6 +9,13 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
 
+  h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #333;
+  }
+  
 .login-container {
     display: flex;
     font-family: Arial, sans-serif;
