--- a/frontend/my-sms-messenger/src/app/login/login.html
+++ b/frontend/my-sms-messenger/src/app/login/login.html
@@ -2,7 +2,7 @@
 <div class="login-container">
     <!-- Left Side: Login Form -->
     <div class="login-form">
-      <h2>Login</h2>
+      <h1>Sign In</h1>
 
       <!-- Error Message -->
       <div *ngIf="errorMessage" class="error-message">
