--- a/frontend/my-sms-messenger/src/app/message-send/message-send.html
+++ b/frontend/my-sms-messenger/src/app/message-send/message-send.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <div class="messenger-box">
+        <div class="outer-box">
         <div class="message-send-container">       
         <h1>MY SMS MESSENGER</h1>
             <a href="#" (click)="logout()" class="logout-link">Logout</a> 
