--- a/frontend/my-sms-messenger/src/styles.css
+++ b/frontend/my-sms-messenger/src/styles.css
@@ -1,1 +1,45 @@
-/* You can add global styles to this file, and also import other style files */
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #333;
+  }
+  
+  .error-message {
+    color: red;
+    margin-bottom: 30px;
+  }
+  
+  .success-message {
+    color: green;
+    margin-bottom: 30px;
+  }
+  
+  button {
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
+  
+  button:hover:not(:disabled) {
+    background-color: #0056b3;
+  }
+  
+  .outer-box {
+    max-width: 800px;
+    max-height: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
